# getmotion-python

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
.github/workflows/: docs.yml
getmotion/: __init__.py  _http.py  client.py  exceptions.py
getmotion/resources/: __init__.py  jobs.py  storyboard.py
