[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getmotion"
version = "0.1.0"
description = "Python SDK for the GetMotion API"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.22",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["getmotion"]
